--- a/simpleerp/inventory/templates/inventory/update_sku.html
+++ b/simpleerp/inventory/templates/inventory/update_sku.html
@@ -7,17 +7,21 @@
 
 <body>
 	<div class='col-lg-12'>
-		<br>	
-		This template displays page for creating a sales job.
+		<br>
+		This template displays page to update SKU.
 
 		<br>
 		<br>
 
-		<form action="{% url 'sales' %}" method="post">
+		<p>Updating SKU : {{sku}}
+
+		<form action="{% url 'update_sku' 'placeholder' %}" method="post">
 			{% csrf_token %}
-			{{ form.as_ul  }}
+			{{ form }}
 			<input type="submit" value="Submit">
 		</form>
+
+		<a class="btn btn-primary" href="{% url 'inventory'%}">Inventory Main Page</a>
 	</div>
 </body>
 </html>
